gravity-infra/kubernetes/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: gravity
  labels:
    app: gravity-pms
